--- a/index.html
+++ b/index.html
@@ -6,25 +6,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mimo Doce</title>
   <link rel="stylesheet" href="style.css">
+  <link href="http://fonts.cdnfonts.com/css/honey" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+  <div class="h2">This site is under construction.</div>
+
   <div class="image-box">
     <img class="logo" src="LogoMimoDoceNovaBlack.png" alt="Logo Mimo Doce">
   </div>
   <div class="header-links">
     <ul>
-      <li><a href="#">Cardapio</a></li>
+      <li><a href="#">Cardápio</a></li>
       <li><a href="#">Eventos</a></li>
       <li><a href="https://wa.me/5531995359110"><i class="fa fa-whatsapp"></i>Consulte</a></li>
       <!--Other possibilities: About, contact, history, gallery-->
     </ul>
   </div>
-  <div class="h1">Panificação e Confeitaria</div>
+  <div class="h1">Panificação & Confeitaria</div>
   <div class="image-box">
     <img class="cake" src="BigCakeNoBackground.png" alt="Big Cake">
   </div>
   <div class="h1">Caiçara, Belo Horizonte</div>
+  <div class="h2">+55 31 99535-9110</div>
   <div class="h2"><a href="https://www.instagram.com/mimodocebh/"><i class="fa fa-instagram"></i></a></div>
 
 </body>
