--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <img class="cake" src="BigCakeNoBackground.png" alt="Big Cake">
   </div>
   <div class="h1">Caiçara, Belo Horizonte</div>
-  <div class="h2">+55 31 99535-9110</div>
+  <div class="h2">Encomende pelo Whatsapp: +55 31 99535-9110</div>
   <div class="h2"><a href="https://www.instagram.com/mimodocebh/"><i class="fa fa-instagram"></i></a></div>
 
 </body>
