--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mimo Doce</title>
+  <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Clicker+Script&family=Open+Sans:wght@300&display=swap" rel="stylesheet"> 
+<title>Mimo Doce</title>
   <link rel="stylesheet" href="style.css">
   <link href="http://fonts.cdnfonts.com/css/honey" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-  <div class="h2">This site is under construction.</div>
+  <div class="h2 cursive">This site is under construction.</div>
 
   <div class="image-box">
     <img class="logo" src="LogoMimoDoceNovaBlack.png" alt="Logo Mimo Doce">
