tweaked font again

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-  <div class="h2 cursive">This site is under construction.</div>
+  <div class="h2">This site is under construction.</div>
 
   <div class="image-box">
     <img class="logo" src="LogoMimoDoceNovaBlack.png" alt="Logo Mimo Doce">
@@ -26,11 +26,11 @@
       <!--Other possibilities: About, contact, history, gallery-->
     </ul>
   </div>
-  <div class="h1">Panificação & Confeitaria</div>
+  <div class="h1 cursive">Panificação & Confeitaria</div>
   <div class="image-box">
     <img class="cake" src="BigCakeNoBackground.png" alt="Big Cake">
   </div>
-  <div class="h1">Caiçara, Belo Horizonte</div>
+  <div class="h1">caiçara, belo horizonte</div>
   <div class="h2">Encomende pelo Whatsapp: +55 31 99535-9110</div>
   <div class="h2"><a href="https://www.instagram.com/mimodocebh/"><i class="fa fa-instagram"></i></a></div>
 
