--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <img class="cake" src="BigCakeNoBackground.png" alt="Big Cake">
   </div>
   <div class="h1">caiçara, belo horizonte</div>
-  <div class="h2">Encomende pelo Whatsapp: +55 31 99535-9110</div>
+  <div class="h2">Encomende pelo Whatsapp<a href="https://wa.me/5531995359110">+55 31 99535-9110</a></div>
   <div class="h2"><a href="https://www.instagram.com/mimodocebh/"><i class="fa fa-instagram"></i></a></div>
 
 </body>
