--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-  <div class="h2">This site is under construction.</div>
+  <div class="h2">This site is under construction</div>
 
   <div class="image-box">
     <img class="logo" src="LogoMimoDoceNovaBlack.png" alt="Logo Mimo Doce">
