--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
   <div class="h2">This site is under construction</div>
 
   <div class="image-box">
-    <img class="logo" src="LogoMimoDoceNovaBlack.png" alt="Logo Mimo Doce">
+
+    <a class = "logo-link" href="./index.html">
+      <img class="logo" src="LogoMimoDoceNovaBlack.png" alt="Logo Mimo Doce">
+    </a>
   </div>
   <div class="header-links">
     <ul>
-      <li><a href="#">Cardápio</a></li>
-      <li><a href="#">Eventos</a></li>
+      <li><a href="./Cardapio_Natal_2021.pdf">Cardápio</a></li>
+      <li><a href="./eventos.html">Eventos</a></li>
       <li><a href="https://wa.me/5531995359110"><i class="fa fa-whatsapp"></i>Consulte</a></li>
       <!--Other possibilities: About, contact, history, gallery-->
     </ul>
@@ -31,6 +34,8 @@
     <img class="cake" src="BigCakeNoBackground.png" alt="Big Cake">
   </div>
   <div class="h1">caiçara, belo horizonte</div>
+
+  <hr class="dividing-line">
   <div class="h2">Encomende pelo Whatsapp<a href="https://wa.me/5531995359110">+55 31 99535-9110</a></div>
   <div class="h2"><a href="https://www.instagram.com/mimodocebh/"><i class="fa fa-instagram"></i></a></div>
 
