site is kind of done

--- a/eventos.html
+++ b/eventos.html
@@ -13,7 +13,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-  <div class="h2">This site is under construction</div>
 
   <div class="image-box">
 
@@ -29,7 +28,13 @@
       <!--Other possibilities: About, contact, history, gallery-->
     </ul>
   </div>
-  <div class="h2">Estamos disponíveis para atender o seu evento grande ou pequeno com bolos, brigadeiros, e bem-casados.
+  <div class="image-box side-by-side">
+    <img class="bemcasado" src="Foto-bem-casado-IMG_4367.jpg" alt="bemcasados">
+    <div class="sidebar">
+      <div class="h1 cursive">Eventos</div>
+      <div class="h2">Estamos disponíveis para atender o seu evento grande ou pequeno com bolos, brigadeiros, e bem-casados. Consulte para os preços.</div>
+    </div>
+  </div>
   
   <hr class="dividing-line">
   <div class="h2">Encomende pelo Whatsapp<a href="https://wa.me/5531995359110">+55 31 99535-9110</a></div>
