Finally almost done...

--- a/eventos.html
+++ b/eventos.html
@@ -32,7 +32,8 @@
     <img class="bemcasado" src="Foto-bem-casado-IMG_4367.jpg" alt="bemcasados">
     <div class="sidebar">
       <div class="h1 cursive">Eventos</div>
-      <div class="h2">Estamos disponíveis para atender o seu evento grande ou pequeno com bolos, brigadeiros, e bem-casados. Consulte para os preços.</div>
+      <p>Estamos disponíveis para atender o seu evento grande ou pequeno em Belo Horizonte com bolos, brigadeiros, e bem-casados.</p>
+      <p><br>Consulte para os preços.</p>
     </div>
   </div>
   
