a few more tweaks

--- a/eventos.html
+++ b/eventos.html
@@ -33,7 +33,7 @@
     <div class="sidebar">
       <div class="h1 cursive">Eventos</div>
       <p>Estamos disponíveis para atender o seu evento grande ou pequeno em Belo Horizonte com bolos, brigadeiros, e bem-casados.</p>
-      <p><br>Consulte para os preços.</p>
+      <p>Consulte para os preços.</p>
     </div>
   </div>
   
