fixed error with capitalization mismatch maybe?

--- a/eventos.html
+++ b/eventos.html
@@ -29,7 +29,7 @@
     </ul>
   </div>
   <div class="image-box side-by-side">
-    <img class="bemcasado" src="Foto-bem-casado-IMG_4367.jpg" alt="bemcasados">
+    <img class="bemcasado" src="Foto-bem-casado-IMG_4367.JPG" alt="bemcasados">
     <div class="sidebar">
       <div class="h1 cursive">Eventos</div>
       <p>Estamos disponíveis para atender o seu evento grande ou pequeno em Belo Horizonte com bolos, brigadeiros, e bem-casados.</p>
