i think its working now

--- a/eventos.html
+++ b/eventos.html
@@ -32,7 +32,7 @@
     <img class="bemcasado" src="Foto-bem-casado-IMG_4367.JPG" alt="bemcasados">
     <div class="sidebar">
       <div class="h1 cursive">Eventos</div>
-      <p>Estamos disponíveis para atender o seu evento grande ou pequedno em Belo Horizonte com bolos, brigadeiros, e bem-casados.</p>
+      <p>Estamos disponíveis para atender o seu evento grande ou pequeno em Belo Horizonte com bolos, brigadeiros, e bem-casados.</p>
       <p>Consulte para os preços.</p>
     </div>
   </div>
