logo links are nicer now

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <div class="h1">caiçara, belo horizonte</div>
 
   <hr class="dividing-line">
-  <div class="h2">Encomende pelo Whatsapp<a href="https://wa.me/5531995359110">+55 31 99535-9110</a></div>
+  <div class="h2">Encomende pelo Whatsapp<br><a href="https://wa.me/5531995359110">+55 31 99535-9110</a></div>
   <div class="h2"><a href="https://www.instagram.com/mimodocebh/"><i class="fa fa-instagram"></i></a></div>
 
 </body>
