--- a/eventos.html
+++ b/eventos.html
@@ -27,7 +27,7 @@
       <!--Other possibilities: About, contact, history, gallery-->
     </ul>
   </div>
-  <div class="image-box side-by-side">
+  <div class="side-by-side">
     <img class="bemcasado" src="Foto-bem-casado-IMG_4367.JPG" alt="bemcasados">
     <div class="sidebar">
       <div class="h1 cursive">Eventos</div>
@@ -37,7 +37,7 @@
   </div>
   
   <hr class="dividing-line">
-  <div class="h2">Encomende pelo Whatsapp<a href="https://wa.me/5531995359110">+55 31 99535-9110</a></div>
+  <div class="h2">Encomende pelo Whatsapp<br><a href="https://wa.me/5531995359110">+55 31 99535-9110</a></div>
   <div class="h2"><a href="https://www.instagram.com/mimodocebh/"><i class="fa fa-instagram"></i></a></div>
 
 </body>
